--- a/hello.html
+++ b/hello.html
@@ -4,32 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Primeira Forma-->
     <title>Hello World</title>
-    <script>
+    <!--Segunda e Terceira forma-->
+    <script>     
         alert("Hello World")
         function f1(){
             alert("Hello World")
         }
     </script>
-    <style type="text/css">
-        
-        </style>
-
 </head>
 <body>
+        <!--Quarta forma-->
         <h1>Hello World</h1>
+       <!--Quinta forma-->
         <h2>Hello World</h2>
+        <!--Sexta forma-->
         <h3>Hello World</h3>
+        <!--Setima forma-->
         <h4>Hello World</h4>
+        <!--Oitava forma1-->
         <h5>Hello World</h5>
         
+        <!--Oitava forma?-->
         <script>
             consele.log("Hello World")
         </script> 
+         <!--Nona forma-->
         <script>
         document.write("Hello World")
         </script>
         <br><br><br>
+         <!--Decima forma (Hello World escrito no botão)-->
         <input type="button" onclick="f1()" value="Hello World" />
+
 </body>
 </html>
